object: Fix memory leak

Noticed while inspecting the code for a different valgrind error.

https://bugzilla.gnome.org/show_bug.cgi?id=688674